# dominari-kyogen

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SETUP.md  TODO.md  clockwork.sh  deploy_localnet.sh  devnet-deploy.bash  local_validator.sh  localhost-deploy.sh  package.json  tsconfig.json
client-ts/: .env  .gitignore  01_InitPrograms.ts  02B_Unpause.ts  02_SetupGame.ts  03_SIMGameKyogen.ts  04_SIMGameStructures.ts  0X_ConfigBuilder.ts  ConfigMaker.ts  README.md  package.json  util.ts
client-ts/assets/: components.yml  packs.yml  structures.yml  units.yml
client-ts/configs/: 10x10-6-1680301488544.json  10x10-6.json  15x15-12.json  1679800716047-Config.json  20x20-16.json  4PlayerTest.yml  TestConfig.yml
kyogen-sdk/: .gitignore  Cargo.toml  build.sh  bundler.sh  nodejs.sh  web.sh
kyogen-sdk/kyogen-sdk-bundler/: kyogen_sdk.js  kyogen_sdk_bg.js  kyogen_sdk_bg.wasm  kyogen_sdk_bg.wasm.d.ts  package.json
kyogen-sdk/kyogen-sdk-nodejs/: kyogen_sdk.d.ts  kyogen_sdk.js  kyogen_sdk_bg.wasm  kyogen_sdk_bg.wasm.d.ts
kyogen-sdk/kyogen-sdk-web/: kyogen_sdk.d.ts  kyogen_sdk.js  kyogen_sdk_bg.wasm  kyogen_sdk_bg.wasm.d.ts  package.json
kyogen-sdk/src/: blueprint.rs  component_index.rs  coreds.rs  gamestate.rs  json_wrappers.rs  kyogen.rs  lib.rs  registry.rs  server.rs  stateless.rs  structures.rs
localkeys/: kyogen-keypair.json  registry-keypair.json  structures-keypair.json
migrations/: README.md
programs/core-ds/src/: lib.rs
programs/kyogen/: Cargo.toml
programs/kyogen/src/: account.rs  component.rs  constant.rs  context.rs  error.rs  event.rs  lib.rs  state.rs
programs/registry/: Cargo.toml
programs/registry/src/: account.rs  constant.rs  context.rs  lib.rs
programs/structures/: Cargo.toml
programs/structures/src/: account.rs  component.rs  constant.rs  context.rs  error.rs  event.rs  lib.rs  state.rs
server/: .gitignore  package.json  tsconfig.json
server/idl/: core_ds.json  dominari.json  kyogen.json  registry.json  structures.json
server/kyogen-sdk-nodejs/: package.json
server/src/: IEvents.ts  TransactionInterface.ts  client.ts  index.ts
server/src/hooks/: ccdc6ca5-ea0e-47fd-b786-c003a0b3d405.json
tests/: kyogen.ts
