[package]
name = "kyogen"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kyogen"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
sdk = ["dep:serde"]

[dependencies]
anchor-lang = "0.26.0"
core_ds = { git="https://github.com/JumpCrypto/sol-arc", features=["cpi"] }
registry = { path = "../registry", features = ["cpi"]}
serde = { version = "1.0.147", optional=true }
solana-program = "=1.14.12"
anchor-spl = "0.26.0"